--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,7 @@ color: #404bbf;
     height: 56px;
     display: block;
     margin: 0 auto;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -340,6 +341,7 @@ color: #404bbf;
 
 .portfolio-list-item {
     flex-basis: calc((100% - 120px) / 6);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-item:hover, :focus {
@@ -370,6 +372,7 @@ color: #404bbf;
     height: 100%;
     transform: translateY(100%);
     transition: transform 300ms ease;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -407,9 +410,12 @@ color: #404bbf;
 .footer-container {
     display: flex;
     gap: 120px;
+    align-items: baseline
 }
 
-.footer-content {}
+.footer-content {
+    margin-right: 120px
+}
 
 
 .footer-logo {
@@ -489,22 +495,7 @@ color: #404bbf;
     margin-top: 8px;
 }
 
-.inst {
-    fill: #F4F4FD;
-    position: relative;
-}
-
-.twi {
-    fill: #F4F4FD;
-    position: relative;
-}
-
-.fb {
-    fill: #F4F4FD;
-    position: relative;
-}
-
-.ln {
+.soc-icon {
     fill: #F4F4FD;
     position: relative;
 }
